<resources>
    <string name="app_name">Cram_project</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="examDate">Exam Date</string>
    <string name="subjectName">Subject Name</string>
    <string name="noOfWorkloads">Number of Workloads</string>
    <string name="workloadsCompleted">Workloads Completed</string>
    <string name="enterSubject">Enter Subject</string>
    <string name="done">DONE</string>
    <string name="wlDifficulty">Workload Difficulty</string>
    <string name="startDateNew">Select date to BEGIN studying</string>
    <string name="endDateNew">Select date to FINISH studying</string>
    <string name="examDateNew">Select EXAM date</string>
    <string name="daysOff">Days off</string>
    <string name="test">TEST</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="back">Return to input</string>
</resources>
